# MandelbrotGenerator

./: CMakeLists.txt
incl/: camera.h  renderworker.h  window.h
src/: camera.cpp  main.cpp  mandelbrot_shader.frag  mandelbrot_shader.vert  renderworker.cpp  window.cpp
